# stable-fragmented-buffer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  stable_fragmented_buffer_docs.md
examples/: append_photos.rs  config_benchmark.rs  lifecycle_demo.rs  producer_consumer.rs  profiling_demo.rs  recycling_demo.rs  shared_lifecycle_benchmark.rs  statistical_benchmark.rs  virtual_backend.rs
src/: lib.rs  page.rs  store.rs  types.rs
src/backend/: mod.rs  segmented.rs  shared.rs  shared_tests.rs  virtual_mem.rs
src/lifecycle/: lifecycle.rs  lifecycle_tests.rs  mod.rs
src/page/: mod.rs  page.rs  store.rs
src/profiling/: mod.rs
src/types/: mod.rs  overflow_handle.rs  types.rs
